# mobility-simulation-cdpm

./: .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  trainasdasd.py
.github/workflows/: ci-docker.yaml  ci.yaml
cdpm/: __init__.py  data.py  train.py
cdpm/_src/: data.py  model.py  simulate.py  train.py
cdpm/_src/nn/: transformer.py
cdpm/nn/: score_model.py
cdpm/scripts/: main.py  simulate.py  train.py
configs/: config.py
data/: x_train.csv
dmma/: __init__.py  data.py  model.py  simulate.py  train.py
dmma/nn/: transformer.py
dmma/scripts/: main.py
examples/: config.py
